Bug 152224 Leak in nsExternalAppHandler, due to reference cycle between the nsIDownload implementation, the helper app service, and the helper app dialog. now, the reference cycle with the helper app dialog is broken in Cancel/CreateProgressListener, and the cycle with the nsIDownload will be broken in Cancel/CloseProgressWindow/OnStopRequest

r=bzbarsky sr=darin